[package]
name = "mev-relay-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "1", features = ["serde"] }
dashmap = "6"
parking_lot = "0.12"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "bid_manager"
harness = false